Build: Upgrade dependencies (except Netty)
This caused a few new warnings to be logged:
- Mockito deprecated `.lenient`, fixed by replacing
  with call to `.strictness`
- Running tests from Intellij caused Mockito to log warnings,
  fixed by adding the "-XX:+EnableDynamicAgentLoading" argument to the
  compiler. See https://stackoverflow.com/a/78056291 for more
  information.